# trading-dashboard

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  commitlint.config.cjs  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  migrations
backend/: .coverage  .dockerignore  .env.test.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_app_config_and_secrets.py  0002_broker_accounts.py  0003_broker_accounts_nlv.py  0004_orders_order_events.py  0005_positions.py  0006_advanced_orders.py  0006_modified_enum.py  0007_advanced_orders.py  0008_phase7a_schwab_account_hash.py  0009_phase7b_instruments_symbol_aliases.py  0010_phase7b1_5_instruments_seed.py  0011_phase8a_order_capability.py  0011a_phase8a_schwab_flip.py  0012_broker_features.py  (+79 more)
backend/app/: main.py
backend/scripts/: entrypoint.sh  generate_proto_stubs.py  mint_schwab_access_token.py  proto-gen.sh  run-tests-failed.sh  run-tests.sh  seed_phase9_app_config.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth.py  test_alembic_0045.py  test_alembic_0047.py  test_alembic_0051.py  test_alembic_0052.py  test_alembic_0069.py  test_alembic_0069_1.py  test_alembic_0071.py  test_alembic_0072.py  test_algo_capability_service.py  test_algo_order_schemas.py  test_algo_schemas.py  test_api_algo.py  test_cf_access.py  test_config_cache.py  test_config_service.py  test_crypto.py  test_earnings.py  test_filings_unit.py  test_health.py  test_metrics.py  test_migration.py  test_oco_alpaca_crypto.py  test_oco_alpaca_equity.py  test_orders_service_algo.py  test_pg_cert_dsn.py  test_registry_internal_ws.py  test_risk_service_algo.py  test_scanner_evaluator.py  test_scanner_indicators.py  test_scanner_scheduler.py  test_scanner_schemas.py  test_scanner_service.py  test_scanner_universe.py  test_telegram_algo.py
bar_aggregator/: Dockerfile  pyproject.toml
bar_aggregator/app/: aggregator.py  bar_pubsub.py  config.py  flush.py  main.py  metrics.py  minute_emitter.py  wal.py
bar_aggregator/tests/: conftest.py  test_aggregator_bucket_math.py  test_coalescer.py  test_flush.py  test_main_lifecycle.py  test_minute_emitter.py  test_wal.py
sidecar/: __init__.py  backoff.py  conftest.py  handlers.py  ibkr_sidecar.py  metrics.py  normalize.py  probe.py  pyproject.toml  tls.py
sidecar/scripts/: base_round_preflight.py  build-windows.ps1  proto-gen.sh  record-golden-traces.ps1  record_traces.py
sidecar/tests/: test_backoff.py  test_entrypoint.py  test_golden_replay.py  test_handlers_bracket.py  test_handlers_cancel_sim_echo.py  test_handlers_health_summary.py  test_handlers_modify_order.py  test_handlers_orders_contract.py  test_handlers_positions.py  test_ibkr_sidecar_base_round.py  test_lifecycle.py  test_normalize.py  test_pnl_cache.py  test_probe.py  test_real_ibkr_e2e_bracket.py  test_real_ibkr_e2e_trade.py  test_real_ibkr_smoke.py  test_tls.py
sidecar_alpaca/: Dockerfile  __init__.py  auth.py  client.py  config.py  handlers.py  main.py  metrics.py  normalize.py  pyproject.toml  streamer.py  streaming.py  symbol_util.py
sidecar_alpaca/tests/: __init__.py  test_bracket_equity.py  test_client.py  test_client_order_id_dedupe.py  test_combo_handler.py  test_crypto_location.py  test_crypto_notional.py  test_crypto_stream.py  test_handlers_abort_return.py  test_handlers_cancel.py  test_handlers_get_historical_bars.py  test_handlers_modify.py  test_handlers_place_extended.py  test_handlers_stub.py  test_handlers_trading_stream_counter.py  test_normalize_asset_class.py  test_orderevent_stream.py  test_preview_order_unimplemented.py  test_streamer.py  test_streamer_crypto.py  test_streamer_drift.py  test_streamer_isolation.py  test_streamer_resync.py  test_symbol_util.py
sidecar_futu/: futu_client.py  futu_sidecar.py  handlers.py  metrics.py  normalize.py  pyproject.toml  sim.py  streamer.py  tls.py
sidecar_futu/scripts/: build-windows.ps1  proto-gen.sh
sidecar_futu/tests/: conftest.py  test_futu_client.py  test_futu_client_bracket.py  test_handlers_bracket.py  test_handlers_cancel.py  test_handlers_configure.py  test_handlers_contracts.py  test_handlers_futu_contract.py  test_handlers_get_historical_bars.py  test_handlers_health.py  test_handlers_list_accounts.py  test_handlers_modify.py  test_handlers_oco.py  test_handlers_orderevent.py  test_handlers_place.py  test_handlers_positions.py  test_handlers_summary.py  test_normalize.py  test_normalize_contract.py  test_normalize_orders.py  test_sim.py  test_status_mapping.py  test_streamer.py
sidecar_schwab/: Dockerfile  auth.py  client.py  config.py  handlers.py  main.py  metrics.py  normalize.py  order_poller.py  order_state_cache.py  poller_supervisor.py  pyproject.toml  simulator.py  streamer.py
sidecar_schwab/scripts/: proto-gen.sh
sidecar_schwab/tests/: test_account_hash_404_retry.py  test_auth_lifecycle.py  test_client_isolation.py  test_client_orders.py  test_configure_idempotent.py  test_handlers_cancel_modify.py  test_handlers_get_historical_bars.py  test_handlers_health.py  test_handlers_list_managed_accounts.py  test_handlers_orders.py  test_handlers_place_order.py  test_handlers_positions.py  test_handlers_stream_quotes.py  test_handlers_stream_search.py  test_handlers_summary.py  test_main.py  test_normalize.py  test_normalize_oco.py  test_normalize_orders.py  test_order_poller.py  test_order_state_cache.py  test_poller_supervisor.py  test_preview_order.py  test_rate_limit_429.py  test_schwab_handlers_abort_return.py  test_schwab_order_poller_multifill.py  test_simulator.py  test_streamer.py  test_streamer_token_rotation.py  test_unimplemented_stubs.py
sidecar_schwab_refresher/: Dockerfile  admin_client.py  config_writer.py  main.py  pyproject.toml  refresher.py  selectors.py  stealth.py  totp.py
sidecar_schwab_refresher/tests/: conftest.py  test_config_writer.py  test_consecutive_failures_auto_disable.py  test_refresher_unit.py  test_run_once_e2e.py  test_selector_health.py  test_totp.py
(+1706 files in other folders)
