[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "exchange-calendars>=4.5",
    "fastapi>=0.136.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "httpx>=0.28.1",
    "ib_async>=1.0.3",
    "msgpack>=1.1.2",
    "prometheus-client>=0.25.0",
    "protobuf>=5.28.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt[crypto]>=2.12.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uuid-utils>=0.14.1",
    "uvicorn[standard]>=0.45.0",
]

[dependency-groups]
dev = [
    "fakeredis[asyncio]>=2.35.1",
    "mypy>=1.20.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.11",
    "syrupy>=5.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
exclude = '(^|/)_generated/'

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app._generated.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_broker: live broker E2E tests requiring external credentials",
    "real_schwab: requires SCHWAB_APP_KEY/SCHWAB_APP_SECRET/SCHWAB_PAPER_ACCOUNT_HASH env vars; live API calls",
    "real_futu: requires FUTU_HOST/FUTU_PORT env vars; live futu OpenD calls",
    "real_ibkr: requires IBKR_PAPER_ACCOUNT + CF_ACCESS_* env vars; live IBKR paper gateway calls",
    "real_alpaca_equity: real Alpaca paper equity E2E (requires ALPACA_PAPER_API_KEY + ALPACA_PAPER_API_SECRET)",
    "no_db: test does not require database migrations",
]
