[project]
name = "bar_aggregator"
version = "0.1.0"
description = "Phase 9 bar aggregator — quote bus → 1s buckets → TimescaleDB hypertable + live pub/sub"
requires-python = ">=3.14"
dependencies = [
  "redis[hiredis]>=5.0",
  "asyncpg>=0.29",
  "structlog>=24.0",
  "uvloop>=0.20",
  "prometheus-client>=0.20",
  "aiohttp>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
