[project]
name = "ibkr-sidecar"
version = "0.4.0"
description = "Phase 4 Windows-native gRPC sidecar wrapping ib_async per IBKR Gateway."
requires-python = ">=3.14"
dependencies = [
  "ib_async>=1.0.3",
  "grpcio>=1.66.0",
  "grpcio-tools>=1.66.0",
  "protobuf>=5.28.0",
  "structlog>=24.4.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-grpc>=0.8.0",
  "pyinstaller>=6.10.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "real_ibkr: tests that require a live IBKR Gateway connection (gated behind CI_USE_REAL_IBKR=1)",
]

[tool.coverage.run]
source = ["sidecar"]
omit = ["sidecar/_generated/*", "sidecar/scripts/*"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["_generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["_generated", "tests"]
