[project]
name = "futu-sidecar"
version = "0.6.0"
description = "Phase 6 Windows-native gRPC sidecar wrapping futu-api for the FutuOpenD HK gateway."
requires-python = ">=3.14"
dependencies = [
  "futu-api>=9.3.5308",
  "grpcio>=1.69.0",
  "grpcio-tools>=1.69.0",
  "protobuf>=5.28.3",
  "structlog>=24.4.0",
  "cryptography>=44.0.0",
  "googleapis-common-protos>=1.66.0",
  "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "types-protobuf>=5.28.0",
  "pyinstaller>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar_futu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["_generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["_generated", "tests"]

[[tool.mypy.overrides]]
module = "sidecar_futu._generated.*"
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "futu.*"
ignore_missing_imports = true
