[project]
name = "sidecar-schwab"
version = "0.7.0"
description = "Schwab Trader API sidecar — gRPC adapter to schwab.com"
requires-python = ">=3.14"
dependencies = [
    "schwabdev==3.0.3",
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "grpcio-reflection>=1.62",
    "protobuf>=5.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "prometheus-client>=0.20",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
