[project]
name = "sidecar-schwab-refresher"
version = "0.7.0"
description = "Tier-2 Playwright auto-refresher for Schwab OAuth (opt-in)"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.45",
    "playwright-stealth>=1.0.6",
    "pyotp>=2.9",
    "httpx>=0.27",
    "structlog>=24.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
